# arpa

./: Cargo.toml  LICENSE-MIT  readme.md  rustfmt.toml
.github/workflows/: rust.yml
sql/: diagnostics.sql  par_meta.sql  process_meta.sql  pulsar_meta.sql  raw_meta.sql  telescopes.sql  template_meta.sql  toas.sql  users.sql
src/: archivist.rs  config.rs  conveniences.rs  diagnostics.rs  error.rs  external_tools.rs  lib.rs  pipeline.rs  worker.rs
src/archivist/: data_types.rs  error.rs  table.rs
src/archivist/data_types/: diagnostics.rs  par_meta.rs  process_meta.rs  pulsar_meta.rs  raw_file.rs  raw_meta.rs  telescope.rs  template_meta.rs  toa_info.rs  user.rs
src/archivist/data_types/raw_meta/: header.rs
src/diagnostics/: composite.rs  snr.rs
src/pipeline/: arguments.rs  progress.rs
